# backtesting_odum

./: .dockerignore  .env.bak  .env.example  .gitignore  AGENTS_QUICK_REFERENCE.md  AGENT_2_STATUS.md  ANY_VENUE_SUPPORT_GUIDE.md  ARCHITECTURE.md  BACKTEST_SPEC.md  BACKTEST_VERIFICATION.md  CHANGELOG.md  CUSTOM_INSTRUMENTS_IMPLEMENTATION_GUIDE.md  CUSTOM_INSTRUMENTS_SUMMARY.md  DOCKER_BUILD_AUTH.md  DOCKER_LOGS_GUIDE.md  ENV_SETUP.md  ENV_VARIABLES_EXPLAINED.md  EXECUTION_ALGORITHMS_GUIDE.md  EXECUTION_ALGORITHMS_IMPLEMENTATION_SUMMARY.md  EXEC_ALGO_COMPARISON_GUIDE.md  FEDERATED_IDENTITY_EXPLAINED.md  FRONTEND_SERVICE_DETECTION.md  FRONTEND_UI_SPEC.md  IMPLEMENTATION_PROMPT.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_STATUS.md  LIVE_EXECUTION_SUMMARY.md  LOCAL_SETUP.md  MERGE_ANALYSIS.md  NAUTILUS_TRADFI_SPORTS_DEFI_INTEGRATION.md  OMS_QUICK_REFERENCE.md  OMS_SMART_ROUTING_GUIDE.md  ORGANIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  PROJECT_OVERVIEW.md  QUICK_TEST_COMMANDS.md  QUICK_TEST_UCS.sh  README.md  REPORT_MODE_ENHANCEMENTS.md  RUN_EXEC_ALGO_COMPARISON.sh  (+21 more)
AGENT_PROMPTS/: AGENT_1_BACKTEST_TESTING.md  AGENT_4_FUSE_INTEGRATION.md  AGENT_5_PERFORMANCE_OPTIMIZATION.md  README.md
backend/: BEST_PRACTICES_REORGANIZATION.md  CORE_FILES_ANALYSIS.md  Dockerfile  IMPLEMENTATION_GUIDE.md  REORGANIZATION_COMPLETE.md  REORGANIZATION_PLAN.md  REORGANIZATION_PROGRESS.md  REORGANIZATION_STATUS.md  REORGANIZATION_SUMMARY.md  __init__.py  backtest_engine.py  catalog_manager.py  data_converter.py  execution_algorithms.py  instrument_utils.py  requirements-local.txt  requirements.txt  results.py  run_backtest.py  smart_router.py  strategy.py  strategy_evaluator.py  ucs_data_loader.py
backend/api/: algorithm_manager.py  data_checker.py  live_server.py  mount_status.py  run_server.py  server.py
backend/config/: __init__.py  loader.py
backend/core/: __init__.py  engine.py  node_builder.py
backend/data/: __init__.py  catalog.py  config_builder.py  converter.py  loader.py  validator.py
backend/execution/: __init__.py  algorithms.py
backend/instruments/: __init__.py  custom_instruments.py  factory.py  instrument_provider.py  registry.py  utils.py
backend/live/: __init__.py  alembic.ini  database.py  models.py  trading_node.py
backend/results/: __init__.py  extractor.py  position_manager.py  serializer.py  timeline.py
backend/scripts/: README.md  REORGANIZATION_PLAN.md  download_may25_binance.py  download_one_day_verify.py  list_available_dates.py  list_gcs_dates_and_files.py  mount_gcs.sh  reorganize_scripts.py  setup_env.sh  setup_local_dev.sh  setup_ucs.sh  start.sh  test_catalog_gcs.py  test_catalog_gcs_simple.py  test_ucs_connection.py  test_ucs_integration.py  verify_gcs_data_format.py  verify_secrets.sh  verify_ucs_installation.py
backend/strategies/: __init__.py  base.py  evaluator.py
backend/utils/: _bootstrap_stderr.py  bootstrap.py  paths.py  (+3 more)
data_downloads/: .gitkeep
docs/: 00_PROJECT_OVERVIEW.md  01_CEFI_VENUES.md  02_DEFI_VENUES.md  03_TRADFI_VENUES.md  04_SPORTS_BETTING_VENUES.md  ALIGNMENT_VERIFICATION_REPORT.md  ARCHITECTURE.md  BACKTEST_ENV_REVIEW.md  DOCKER_INFRASTRUCTURE_SUMMARY.md  DOCKER_INSTALLATION.md  README.md  STABLE_BRANCH_AGENT_GUIDE.md
examples/: CATALOG_UPLOAD_GUIDE.md  NAUTILUS_VERIFICATION.md  QUICK_START.md  README.md  create_all_parquet_files.py  create_parquet_files.py  create_trade_ticks_parquet.py  upload_to_catalog.py
execution_services.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+107 files in other folders)
