[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "execution-services"
version = "1.0.0"
description = "Production-grade backtesting system built on NautilusTrader with external JSON configuration and GCS FUSE-ready architecture"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ikenna Igboaka", email = "ikenna@odum-research.com"}
]
keywords = ["backtesting", "trading", "nautilustrader", "execution", "trading-system"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.13"
dependencies = [
    "nautilus-trader>=1.220.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    # unified-cloud-services: Installed separately from GitHub (see Dockerfile or local setup instructions)
    # This is kept separate to support GitHub token authentication for private repos
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "black>=25.11.0",
    "isort>=7.0.0",
    "mypy>=1.19.0",
]

[project.scripts]
run-backtest = "backend.run_backtest:main"

[tool.setuptools]
packages = [
    "backend",
    "backend.api",
    "backend.instruments",
    "backend.utils",
]
include-package-data = true

[tool.setuptools.package-data]
backend = [
    "scripts/**/*.sh",
    "scripts/**/*.py",
]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.mypy]
python_version = "3.13.7"
warn_return_any = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["backend/tests", "tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

